syntax = "proto3";

package mailpb;
option go_package = "/mailpb";

service MailService {
  rpc SendConfirmationEmail(ConfirmationRequest) returns (ConfirmationResponse);
}

message ConfirmationRequest {
  string email = 1;
  string subject = 2;
  string body = 3;
}

message ConfirmationResponse {
  bool success = 1;
  string message = 2;
}
