syntax = "proto3";

package userpb;

option go_package = "proto/userpb";

service UserService {
  rpc RegisterUser (CreateRequest) returns (CreateResponse);
  rpc AuthenticateUser (AuthRequest) returns (AuthResponse);
  rpc GetUserProfile (GetRequest) returns (GetResponse);
  rpc ConfirmEmail(ConfirmEmailRequest) returns (ConfirmEmailResponse);
}

message CreateRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string role = 5;
}

message CreateResponse {
  int64 user_id = 1;
  string message = 2;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}

message GetRequest {
  int64 user_id = 1;
}

message GetResponse {
  int64 user_id = 1;
  string name = 2;
  string email = 3;
  string role = 5;
}

message ConfirmEmailRequest {
  string token = 1;
}

message ConfirmEmailResponse {
  bool success = 1;
  string message = 2;
}

